add feature getAll book
