# src/main/java/com/deep/library/controllers/BookController.java
@@ -5,12 +5,12 @@ import com.deep.library.domains.dto.BookResponse;
 import com.deep.library.services.BookService;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableDefault;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequestMapping("/api/v1/books")
@@ -29,5 +29,10 @@ class BookController {
     ) {
         BookResponse newBook = bookService.createBook(dto);
         return ResponseEntity.status(HttpStatus.CREATED).body(newBook);
+    }
+
+    @GetMapping
+    Page<BookResponse> getBooks(Pageable pageable) {
+        return bookService.getAllBooks(pageable);
     }
 }
